--- a/Codes/Final_notebook.ipynb
+++ b/Codes/Final_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "continental-discount",
+   "id": "straight-elite",
    "metadata": {},
    "source": [
     "# Stock Trend based on Fundamentals\n",
@@ -13,16 +13,16 @@
     " +-3%\n",
     "\n",
     "__Classes__\n",
-    "- Buy Price high and Price low increase by 3% or more in the next quarter.\n",
-    "- Sell Price high and Price low decrease by -3% or more in the next quarter\n",
-    "- Hold If neither happen \n",
+    "- Buy: Price high and Price low increase by 3% or more in the next quarter.\n",
+    "- Sell: Price high and Price low decrease by -3% or more in the next quarter\n",
+    "- Hold: If neither happen \n",
     "\n",
     "For our fundamental data (Shares, Assets, etc.), we will be observing two QRs to create new values. The changes from the previous QR to the current or present QR will be measured as a percent change instead of their actual value.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "standing-hollow",
+   "id": "curious-windsor",
    "metadata": {},
    "source": [
     "# Imports"
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "composed-columbia",
+   "id": "accomplished-motel",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "twenty-supervisor",
+   "id": "connected-connectivity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "executed-recorder",
+   "id": "structural-mission",
    "metadata": {},
    "source": [
     "# Importing the Generated Data"
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "promising-coverage",
+   "id": "lovely-freight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "objective-cowboy",
+   "id": "jewish-stick",
    "metadata": {},
    "source": [
     "## Exploratory Data Analysis (EDA) "
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "provincial-playback",
+   "id": "musical-release",
    "metadata": {},
    "source": [
     "### Histogram plot\n",
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "experimental-teaching",
+   "id": "collaborative-queensland",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ignored-welding",
+   "id": "third-company",
    "metadata": {},
    "source": [
     "Most of the input parameter are exponentially distributed"
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "central-today",
+   "id": "unable-hometown",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "drawn-slide",
+   "id": "tough-personality",
    "metadata": {},
    "source": [
     "> The dataset has a huge difference between the records resulting in label2 and label0"
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "moving-conversion",
+   "id": "spread-presentation",
    "metadata": {},
    "source": [
     "### Correlation Plot\n",
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "aquatic-burke",
+   "id": "virtual-wrist",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "resident-dubai",
+   "id": "expected-casting",
    "metadata": {},
    "source": [
     "Our dataset is highly correlated, this may impact the model performace. \n",
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "expensive-thread",
+   "id": "immune-accommodation",
    "metadata": {},
    "source": [
     "### PCA "
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fuzzy-investing",
+   "id": "trying-script",
    "metadata": {},
    "source": [
     "#### Visualizing the labels in PCA (n_components=2)\n",
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "gorgeous-shooting",
+   "id": "younger-observation",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "distributed-cooper",
+   "id": "overhead-spectrum",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lesbian-litigation",
+   "id": "reliable-accountability",
    "metadata": {},
    "source": [
     "A clear trend seperating the three labels is not apparent when visualizing it with PCA(n_components=2)"
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incomplete-vegetarian",
+   "id": "forbidden-likelihood",
    "metadata": {},
    "source": [
     "#### PCA Dimensionality Reduction"
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "martial-eclipse",
+   "id": "conservative-telephone",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "demographic-treasury",
+   "id": "mexican-minute",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "convertible-vanilla",
+   "id": "electoral-witch",
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "approved-australian",
+   "id": "demonstrated-absolute",
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "smoking-application",
+   "id": "political-rwanda",
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "scheduled-external",
+   "id": "detected-budapest",
    "metadata": {},
    "source": [
     "Taking PCA components that results in 99.99% of the variance, reduces the feature space form 23 columns to 17 columns. "
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recovered-boston",
+   "id": "legislative-sewing",
    "metadata": {},
    "source": [
     "### !Resample if PCA doesn't work"
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "joined-envelope",
+   "id": "polished-officer",
    "metadata": {},
    "source": [
     "## Model & Training"
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "comparative-adelaide",
+   "id": "secondary-miller",
    "metadata": {},
    "source": [
     "1. Logistic Regression\n",
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "breathing-shipping",
+   "id": "demanding-russell",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "characteristic-cheese",
+   "id": "social-confidence",
    "metadata": {},
    "source": [
     "### Logistic Regression\n",
@@ -874,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "given-intention",
+   "id": "applicable-withdrawal",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "endless-enforcement",
+   "id": "economic-marriage",
    "metadata": {},
    "source": [
     "The resultant model is highly baised towards label0 and performs poorly on the other labels. "
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "electrical-season",
+   "id": "positive-journal",
    "metadata": {},
    "source": [
     "### Decision Tree\n",
@@ -944,14 +944,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "strong-factor",
+   "id": "becoming-blackjack",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "double-playback",
+   "id": "proof-experiment",
    "metadata": {},
    "source": [
     "### XGBoost\n",
@@ -964,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "particular-entertainment",
+   "id": "modular-commission",
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "functional-newspaper",
+   "id": "cognitive-norman",
    "metadata": {},
    "source": [
     "### Random Forest\n",
@@ -1043,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "included-diploma",
+   "id": "static-toddler",
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "close-minority",
+   "id": "painted-medicine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fabulous-treat",
+   "id": "confidential-capital",
    "metadata": {},
    "source": [
     "## AutoML part"
@@ -1125,7 +1125,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "inner-albania",
+   "id": "above-inspector",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "national-identification",
+   "id": "certified-bridges",
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "freelance-planet",
+   "id": "exciting-newspaper",
    "metadata": {},
    "outputs": [
     {
@@ -1375,7 +1375,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "needed-uruguay",
+   "id": "saved-solomon",
    "metadata": {},
    "outputs": [
     {
@@ -1402,7 +1402,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "affected-explanation",
+   "id": "olympic-inspiration",
    "metadata": {},
    "outputs": [
     {
